--- a/index.html
+++ b/index.html
@@ -144,21 +144,18 @@
                           <div>
                             <div class="new-address">
                               <div class="form-group">
-                                <label for="new-street-name">Phone number</label>
+                                <label for="new-phone-number">Phone number</label>
                                 <input type="text" class="form-control new-street" id="street">
                               </div>
                               <div class="form-group">
-                                <label for="new-city">County</label>
-                                <input type="text" class="form-control new-city" id="city">
+                                <label for="new-county">County</label>
+                                <input type="text" class="form-control new-county" id="city">
                               </div>
                               <div class="form-group">
-                                <label for="new-state">Street</label>
-                                <input type="text" class="form-control new-state" id="state">
+                                <label for="new-street">Street</label>
+                                <input type="text" class="form-control new-street" id="state">
                               </div>
-                              <div class="form-group">
 
-                                <input type="text" class="form-control" id="zip">
-                              </div>
                               <div class="form-group">
                                 <label for="address-type">Rush Order (Skip the line for Ksh100 extra!)</label>
                                 <select class="form-control" id="rushOrder">
@@ -187,10 +184,10 @@
                         <h3>Thank you <span id="nameHere"></span>!</h3>
                         <div class="row">
                           <div class="col-xs-7 addressText">
-                            <h3>Your Final order total is: Ksh<span id="finalTotalHere"></span></h3>
+                            <h3>Your Final order total is: $<span id="finalTotalHere"></span></h3>
                             <h3>We will deliver to this address:</h3>
                             <h4><span id="streetHere"></span></h4>
-                            <h4><span id="countyHere"></span>, <span id="countyHere"></span></h4>
+                            <h4><span id="countyHere"></span></h4>
                           </div>
                         </div>
                       </div>
