--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@
 
 <body>
 
+
   <!****************** Home ****************>
 
     <div class="container-fluid">
       <div class="hed">
         <div class="row">
           <div class="col-md-12 text center" class="first">
+
             <h1><strong><span>"WELCOME TO THE SLICE GUY PIZZA."</span></strong></h1>
             <br><br>
             <div id="nimo">
@@ -175,7 +177,7 @@
                       </ol>
                       <div class="row">
                         <div class="col-xs-10 col-xs-offset-1" id="totalDiv">
-                          <p>$<span class="framed" id="totalHere"></span></p>
+                          <p>Ksh<span class="framed" id="totalHere"></span></p>
                         </div>
                       </div>
                     </div>
@@ -184,7 +186,7 @@
                         <h3>Thank you <span id="nameHere"></span>!</h3>
                         <div class="row">
                           <div class="col-xs-7 addressText">
-                            <h3>Your Final order total is: $<span id="finalTotalHere"></span></h3>
+                            <h3>Your Final order total is: Ksh<span id="finalTotalHere"></span></h3>
                             <h3>We will deliver to this address:</h3>
                             <h4><span id="streetHere"></span></h4>
                             <h4><span id="countyHere"></span></h4>
