--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     <div class="col-xs-7 col-xs-offset-1">
                       <div class="row topsAdd stagedReveal framed">
                         <div class="col-xs-5">
-                          <h3 class="heading">Pick your toppings:</h3>
+                          <h3 class="heading"><center>Pick your toppings:</center></h3>
                           <form action="form_action.asp" class="toppings">
                             <input type="checkbox" name="topping" value="1" id="cheese">Cheese<br>
                             <input type="checkbox" name="topping" value="2">Pepperoni<br>
@@ -114,7 +114,7 @@
                       </div>
                       <div class="row stagedReveal thanks framed">
                         <div class="col-xs-9 ">
-                          <h1>Thank you for your order!</h1>
+                          <h6><strong>Thank you for your order!</strong></h6>
                           <p>Hang on, I need another pizza!</p>
                           <form id="pizza2">
                             <div class="form-group">
@@ -195,24 +195,30 @@
 
 
                   </div>
+                  <footer>
+                    <center>
+                      &copy; Nimo Said 2019
+                      <br>
+                      <a href="">Terms Of Service</a>
+                    </center>
+                  </footer>
+
               </div>
             </div>
           </div>
+        </div>
 
 
 
-            <!***************footer**************>
+        <!***************footer**************>
+          <div class="container">
+            <div class="row">
 
-              <footer>
-                <center>
-                   &copy; Nimo Said 2019
-                  <br>
-                  <a href="">Terms Of Service</a>
-                </center>
-              </footer>
               <script src="./javascript/script.js"></script>
               <script src="./javascript/jquery-3.4.1.js"></script>
               <script src="./javascript/bootstrap.js"></script>
+            </div>
+          </div>
 </body>
 
 </html>
