--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </script>
 </head>
 
-<body>
+<body style="background-image: url("../img/pizza4.jpg");">
 
 
   <!****************** Home ****************>
