add changes made

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </script>
 </head>
 
-<body style="background-image: url("../img/pizza4.jpg");">
+<body>
 
 
   <!****************** Home ****************>
