add changes made in index.html

--- a/index.html
+++ b/index.html
@@ -292,19 +292,19 @@
                             <div class="form-check">
                               <input class="form-check-input" name='crustRadio' type="radio" value="Cheese Stuffed Crust" id="cheeseCrust">
                               <label class="form-check-label" for="cheeseCrust">
-                                Cheese Stuffed Crust ($3)
+                                Cheese Stuffed Crust (Ksh300)
                               </label>
                             </div>
                             <div class="form-check">
                               <input class="form-check-input" name='crustRadio' type="radio" value="Spicy Crust" id="spicyCrust">
                               <label class="form-check-label" for="spicyCrust">
-                                Spicy Crust
+                                Spicy Crust (Ksh 200)
                               </label>
                             </div>
                             <div class="form-check">
                               <input class="form-check-input" name='crustRadio' type="radio" value="House Special Crust" id="houseCrust">
                               <label class="form-check-label" for="houseCrust">
-                                House Special Crust
+                                House Special Crust (Ksh150)
                               </label>
                             </div>
                           </div>
