add changes made in index.html

--- a/index.html
+++ b/index.html
@@ -298,13 +298,13 @@
                             <div class="form-check">
                               <input class="form-check-input" name='crustRadio' type="radio" value="Spicy Crust" id="spicyCrust">
                               <label class="form-check-label" for="spicyCrust">
-                                Spicy Crust (Ksh 200)
+                                Spicy Crust
                               </label>
                             </div>
                             <div class="form-check">
                               <input class="form-check-input" name='crustRadio' type="radio" value="House Special Crust" id="houseCrust">
                               <label class="form-check-label" for="houseCrust">
-                                House Special Crust (Ksh150)
+                                House Special Crust 
                               </label>
                             </div>
                           </div>
